# Tools-A2A

./: .env.example  .gitignore  CODE_REVIEW_ee7f51d.txt  Cargo.toml  Dockerfile  README.md  TODOS.md  dev-compose.yml  dev-gateway.toml  docker-compose.yml  gateway.toml  install.sh
.github/workflows/: ci.yml
agents/orchestrator/: Cargo.toml
agents/orchestrator/src/: main.rs
agents/research/: Cargo.toml
agents/research/src/: main.rs
agents/writer/: Cargo.toml
agents/writer/src/: main.rs
crates/a2a-cli/: Cargo.toml
crates/a2a-cli/src/: main.rs
crates/a2a-gateway/: Cargo.toml
crates/a2a-gateway/src/: auth.rs  config.rs  context_builder.rs  contributions.rs  db.rs  error_class.rs  file_sync.rs  groups.rs  http_server.rs  identity.rs  lib.rs  local_server.rs  lxc.rs  main.rs  memory_service.rs  nats_bus.rs  object_store.rs  onboarding.rs  peer_client.rs  peer_server.rs  peer_sync.rs  projects.rs  pulsar_bus.rs  reconciler.rs  registry.rs  router.rs  task_log.rs  util.rs
crates/a2a-gateway/src/migrations/: 001_init.sql  002_projects.sql  003_file_sync.sql  004_task_log.sql  005_contributions.sql  006_groups.sql  007_task_status.sql  008_memory_facts.sql  009_peer_cursors.sql
crates/a2a-gateway/src/rem/: CHANGELOG.md  LAST-RUN.md
crates/a2a-gateway/src/web/: mod.rs  projects.rs
crates/a2a-gateway/templates/: base.html  contribution.html  dashboard.html  onboard_prompt.html  project.html  task_log_partial.html
crates/a2a-gateway/tests/: call_test.rs  helpers.rs  identity_test.rs  phase2_file_sync_test.rs  phase2_groups_contributions_test.rs  phase2_projects_test.rs  phase2_task_log_test.rs  policy_test.rs  reconciler_test.rs  register_test.rs
crates/a2a-proto/: Cargo.toml  build.rs
crates/a2a-proto/src/: lib.rs
crates/a2a-sdk/: Cargo.toml
crates/a2a-sdk/src/: agent.rs  client.rs  convert.rs  hooks.rs  lib.rs  options.rs  types.rs
crates/a2a-sdk/tests/: sdk_test.rs
crates/a2a-sidecar/: Cargo.toml
crates/a2a-sidecar/src/: main.rs
docs/: SECURITY_AUDIT.md  a2a-architecture.md
proto/: local.proto  peer.proto
