[package]
name    = "research"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "research"
path = "src/main.rs"

[dependencies]
a2a-sdk    = { path = "../../crates/a2a-sdk" }
tokio      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest    = { workspace = true }
